# haggis

./: .gitignore  Cargo.toml  README.md  UPDATED_CUT_PLANE_API.md  VISUALIZATION_SYSTEM.md  debug_output.txt  debug_output2.txt  debug_output3.txt  debug_output4.txt  haggis_file_layout.md
.claude/: settings.local.json
examples/: GETTING_STARTED.md  camera_gizmo_example.rs  debug_viewport_gizmo.rs  shadow_cache_demo.rs  simple_viewport_test.rs  viewport_gizmo_example.rs
examples/conways_game_of_life/: main.rs
examples/conways_game_of_life_3d/: main.rs
examples/conways_game_of_life_cpu/: main.rs
examples/cut_plane_demo/: README.md  main.rs
examples/lbm_fluid_3d/: main.rs
examples/quickstart/: README.md  main.rs
examples/simulation_usage/: README.md
examples/simulation_usage/high_level/: flocking_simulation.rs  physics_demo.rs  simple_particles.rs
examples/simulation_usage/high_level/cpu/: simple_particles.rs
examples/simulation_usage/high_level/gpu/: simple_particles.rs
examples/simulation_usage/low_level/: manual_buffer_management.rs
examples/simulation_usage/low_level/cpu/: performance_comparison.rs
examples/simulation_usage/low_level/gpu/: advanced_rendering.rs  custom_compute_shader.rs  manual_buffer_management.rs  performance_comparison.rs
examples/simulation_usage/mid_level/: custom_forces.rs  hybrid_cpu_gpu.rs  performance_comparison.rs
examples/test/: cube.mtl  fractal.mtl  main.rs  torus.mtl
examples/three_body/: README.md  main.rs
examples/ui_styles/: README.md  main.rs
examples/ui_styles/fonts/: README.md
src/: app 2.rs  app.rs  example_integration.rs  lib.rs  prelude.rs
src/gfx/: default.wgsl  global_bindings.rs  material.rs  mod.rs  object.rs  pipeline_manager.rs  render_engine.rs  scene.rs  shader.wgsl  texture_resource.rs  vertex.rs
src/gfx/camera/: camera_controller.rs  camera_utils.rs  mod.rs  orbit_camera 2.rs  orbit_camera.rs
src/gfx/geometry/: mod.rs  primitives.rs
src/gfx/gizmos/: camera_gizmo.rs  manager.rs  mod.rs  test_viewport.rs  traits.rs  viewport_gizmo.rs
src/gfx/picking/: mod.rs
src/gfx/rendering/: depth_to_color.wgsl  instanced_grid.rs  instanced_renderer.rs  mod.rs  pbr.wgsl  pipeline_manager.rs  render_engine 2.rs  render_engine.rs  render_pass_ext.rs  shadow_blur.wgsl  shadow_cache.rs  shadow_cache_docs.md  shadow_pass.wgsl  vertex.rs  visualization_renderer 2.rs  visualization_renderer.rs
src/gfx/rendering/shaders/: instanced_pbr.wgsl
src/gfx/resources/: global_bindings.rs  material.rs  mod.rs  texture_resource.rs
src/gfx/scene/: mod.rs  object.rs  scene.rs  vertex.rs
src/gfx/ui/: mod.rs  panel.rs
src/performance/: mod.rs
src/simulation/: base_simulation.rs  cpu.rs  gpu.rs  high_level.rs  low_level.rs  manager.rs  mid_level.rs  mod.rs  traits.rs
src/simulation/examples/cpu/: basic_particles.rs  mod.rs  simply_move.rs
src/simulation/examples/gpu/: mod.rs  simply_move_gpu.rs
src/ui/: manager.rs  mod.rs  panel.rs
src/visualization/: cut_plane_2d.rs  manager.rs  mod.rs  new_manager.rs  traits.rs
src/visualization/rendering/: bridge.rs  materials 2.rs  materials.rs  mod.rs  renderer.rs  shaders.rs
src/visualization/rendering/shaders/: visualization.wgsl
src/visualization/ui/: cut_plane_controls.rs  mod.rs
src/wgpu_utils/: binding_types.rs  mod.rs  uniform_buffer.rs
