[package]
name = "haggis"
version = "0.1.0"
edition = "2021"
description = "A general-purpose GPU compute and render engine for simulation visualizations"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
winit = "0.30.11"
env_logger = "0.11.8"
log = "0.4"
wgpu = "25.0.2"
pollster = "0.4.0"
bytemuck = "1.23.1"
cgmath = "0.18.0"
anyhow = "1.0.98"
tobj = "4.0.3"
thiserror = "2.0.12"


imgui = "0.12.0"
imgui-wgpu = "0.25.0"
imgui-winit-support = "0.13.0"


[dev-dependencies]
rand = "0.9.1"
num_cpus = "1.16.0"

[dependencies.rand]
version = "0.9.1"
optional = false

[dependencies.futures]
version = "0.3"
optional = false

# High-level API examples - CPU vs GPU comparison
[[example]]
name = "simple_particles_cpu"
path = "examples/simulation_usage/high_level/cpu/simple_particles.rs"

[[example]]
name = "simple_particles_gpu"
path = "examples/simulation_usage/high_level/gpu/simple_particles.rs"

# Low-level API examples - Advanced CPU vs GPU optimization
[[example]]
name = "performance_comparison_cpu"
path = "examples/simulation_usage/low_level/cpu/performance_comparison.rs"

[[example]]
name = "performance_comparison_gpu"
path = "examples/simulation_usage/low_level/gpu/performance_comparison.rs"

# Additional low-level GPU examples
[[example]]
name = "custom_compute_shader"
path = "examples/simulation_usage/low_level/gpu/custom_compute_shader.rs"

[[example]]
name = "manual_buffer_management"
path = "examples/simulation_usage/low_level/gpu/manual_buffer_management.rs"

[[example]]
name = "advanced_rendering"
path = "examples/simulation_usage/low_level/gpu/advanced_rendering.rs"
